syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.luapp.grpc.proto";

package proto;

message HelloRequest {
    string firstName = 1;
    string lastName = 2;
}

message HelloResponse {
    string greeting = 1;
}

service HelloService {
    rpc hello1(HelloRequest) returns (HelloResponse);
    rpc hello2(HelloRequest) returns (stream HelloResponse);
    rpc hello3(stream HelloRequest) returns (HelloResponse);
    rpc hello4(stream HelloRequest) returns (stream HelloResponse);
}